--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/brownies.html">Brownies</a>
+        <a href="recipes/banana-bread.html">Banana bread</a>
+        <a href="recipes/cinnamon-rolls.html">Cinnamon rolls</a>
     </body>
 </html>
