New recipe page

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -4,6 +4,30 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>Brownies recipe</h1>
+        <a href="../index.html">Home</a>
+        <h1>Brownies</h1>
+        <img src="../img/brownies.jpg" alt="Picture of brownies" height = "200" width = "200"/>
+        <h3>Description</h3>
+        <p>Gooey chocolate brownies with caramel or chocolates dotted throughout them to add moisture. </p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>150g butter</li>
+            <li>75g light soft brown sugar</li>
+            <li>150g plain chocolate</li>
+            <li> 1tbsp golden syrup</li>
+            <li>3 eggs</li>
+            <li>125g golden caster sugar</li>
+            <li>vanilla extract</li>
+            <li>150g plain flour</li>
+            <li>1/2 tsp baking powder</li>
+            <li>3 tbsp cocoa powder</li>
+            <li>4-6 tbsp caramel or chocolate hazelnut spread</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Heat the oven to 180C/160C fan/gas 4. Line a 20cm square cake tin with baking parchment. Melt together the butter, brown sugar, chocolate and golden syrup gently on a low heat until it is smooth. Remove the pan from the heat.</li>
+            <li>Whisk together the eggs and caster sugar in a large bowl until light and fluffy – this will take a few minutes and is worth doing properly. Add the vanilla extract, then sift over the flour, baking powder and cocoa powder and add the chocolate mixture. Fold everything together quickly and scoop half of the mixture into the tin. Dot over scoops of caramel or chocolate hazelnut spread and then scoop the rest of the brownie mixture over the top. Add more scoops of caramel or chocolate spread, if you like, and bake for 30 mins. The top of the mixture should now be set and slightly cracked looking, but the mixture underneath will still have a slight wobble.</li>
+            <li>Remove from the oven and allow to cool completely before cutting into squares. Dust the tops with cocoa or icing sugar, if you like, or if serving as a dessert drizzle with more caramel. Will keep for 3 days in an airtight container.</li>
+        </ol>
     </body>
 </html>
