--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/brownies.html">Brownies</a>
-        <a href="recipes/banana-bread.html">Banana bread</a>
-        <a href="recipes/cinnamon-rolls.html">Cinnamon rolls</a>
+        <ul>
+        <li><a href="recipes/brownies.html">Brownies</a></li>
+        <li><a href="recipes/banana-bread.html">Banana bread</a></li>
+        <li><a href="recipes/cinnamon-rolls.html">Cinnamon rolls</a></li>
+        </ul>
     </body>
 </html>
